# copal

./: .clangd  .env.example  .gitignore  Dockerfile  LICENSE  README.md  test.sh
copal/: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  bootstrap.sh  build.sh
copal/benchmark/: main.cpp  sin.cpp
copal/include/: math_concept.hpp  scalar.hpp  sin_lut.hpp  stdlib.hpp  vector_impl.hpp  vector_stdx.hpp
copal/include/copal/: sin_lut.hpp
copal/include/scalar/: math.hpp  sin.hpp
copal/include/stdlib/: sin_stdlib.hpp
copal/include/vector_impl/: math.hpp
copal/include/vector_stdx/: sin.hpp
copal/includes/: num.hpp  sin_lut.hpp  stdx_definition.hpp
copal/includes/scalar/: math.hpp  sin.hpp
copal/includes/stdlib/: math.hpp  sin.hpp
copal/includes/vector_impl/: math.hpp  sin.hpp
copal/includes/vector_stdx/: math.hpp  sin.hpp
copal/results/: 2024-07-10-optimized.md  2024-07-10-unoptimized.md  _regex-format.md
copal/src/: scalar.cpp  std_lib.cpp  vector_impl.cpp  vector_stdx.cpp
copal/test/: fixture.hpp  math.test.cc  notes.md  sin.test.cc
copal/test/scalar/: math.test.cc  sin.test.cc
docker/: README.md
docker/copal/: Dockerfile
docker/cpp_base/: Dockerfile
docker/cpp_build_env/: Dockerfile
docker/cpp_dependencies/: Dockerfile
docker/cpp_dependencies/scripts/: 10-clone-dependencies.sh  20-build-dependencies.sh  _dependency_settings.env  build_dependencies.sh  export-dependencies.sh
results/: 2024-07-28-115600.md  2024-07-31-084500.md  2024-08-01-201100.json  __main__.py  table-all.md  table-ranked-median-speed.md
results/lib/: __init__.py  benchmark_result.py  benchmark_result_ranking.py  table.py
scripts/: aws_creds.sh  container-shell.sh  docker-build.sh  run.sh
scripts/image/: 100-install-system-packages.sh  200-clone-all-dependencies.sh  210-build-all-dependencies.sh  211-check-env-vars.sh  212-dependency-variables.sh  300-export-dependencies.sh
